--- a/EsempioRouting.html
+++ b/EsempioRouting.html
@@ -3,12 +3,14 @@
 <head>
     <title>Angular JS Views</title>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    //per utilizzare il routing è necessario importare la libreria angular-route
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 </head>
 
 <body>
     <h2>AngularJS</h2>
     <div ng-app="mainApp">
+
         <p><a href="#addStudent">Add Student</a></p>
         <p><a href="#viewStudents">View Students</a></p>
         <p><a href="nonva">nonva</a></p>
@@ -31,6 +33,11 @@
     </div>
 
     <script>
+
+        /*al modulo devo passare il nome dell'app e la variabile ngRoute
+        tra le parentesi quadre posso inserire una serie di valori (Array)
+        che rappresentano le dipendenze di quel modulo.
+          */
         var mainApp = angular.module("mainApp", ['ngRoute']);
 
         mainApp.config(['$routeProvider', function($routeProvider) {
